tests/lean/inductionMutual.lean.expected.out
inductionMutual.lean:11:2-11:14: error: The `induction` tactic does not support the type `A` because it is mutually inductive

Hint: Consider using the `cases` tactic instead
